@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 
 AC_INIT(src)
-AM_INIT_AUTOMAKE(mp3asm, 0.1.1)
+AM_INIT_AUTOMAKE(mp3asm, 0.1.2)
 AC_PROG_CC
 
 dnl Checks for programs.
@@ -13,7 +13,7 @@ dnl Checks for libraries.
 
 dnl Checks for header files.
 AC_HEADER_STDC
-AC_CHECK_HEADERS(fcntl.h unistd.h)
+AC_CHECK_HEADERS(unistd.h)
  
 dnl Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
